<resources>
    <string name="app_name">CountriesApp</string>
    <string name="msg_clear_cash">Clear cache</string>
    <string name="msg_cache_is_empty">Cache is empty</string>
    <string name="load_countries">Load countries</string>
    <string name="clear_cache">Clear cache</string>


    <string name="threshold_inside">Inside: %1$d</string>
    <string name="error_enter_correct_count_symbols"> Enter  &#160;</string>
    <string name="country_name">Name: %1$s</string>
    <string name="capital">Capital: %1$s</string>
    <string name="country_region">Region: %1$s</string>
    <string name="country_area">Area: %1$s</string>
    <string name="population">Population: %1$s</string>
    <string name="numeric_code">Numeric code: %1$s</string>
</resources>
