<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:src="@mipmap/ic_launcher"
            android:id="@+id/iv_country_flag"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:text="@string/country_name"
            android:id="@+id/tv_country_name"
            style="@style/DetailCountryText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_48dp" />

        <TextView
            android:text="@string/capital"
            android:id="@+id/tv_country_capital"
            style="@style/DetailCountryText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_48dp" />

        <TextView
            android:text="@string/country_region"
            android:id="@+id/tv_country_region"
            style="@style/DetailCountryText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_48dp" />

        <TextView
            android:text="@string/country_area"
            android:id="@+id/tv_country_area"
            style="@style/DetailCountryText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_48dp" />

        <TextView
            android:text="@string/population"
            android:id="@+id/tv_country_population"
            style="@style/DetailCountryText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_48dp" />

        <TextView
            android:text="@string/numeric_code"
            android:id="@+id/tv_country_numeric_code"
            style="@style/DetailCountryText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_48dp" />


    </LinearLayout>

</ScrollView>